--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -10333,4 +10333,13 @@ a.text-dark:hover, a.text-dark:focus {
     border-color: #dee2e6;
   }
 }
+@media (min-width: 576px) {  }
+
+
+@media (min-width: 768px) { }
+ 
+@media (min-width: 992px) { }
+
+
+@media (min-width: 1200px) {  }
 /*# sourceMappingURL=bootstrap.css.map */
